--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config webpack.prod.js",
     "build:dev": "webpack --config webpack.config.js",
     "start": "webpack serve --config webpack.config.js --open --port=8090",
-    "watch" : "webpack --watch"
+    "watch": "webpack --watch"
   },
   "author": "Inma Gijón",
   "license": "ISC",
@@ -23,12 +23,12 @@
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "node-sass": "^7.0.3",
+    "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.0",
-    "node-sass": "^7.0.3",
-    "sass-loader": "^13.1.0"
+    "webpack-dev-server": "^4.11.0"
   }
 }
